--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 autopep8==1.4.4
+boto3==1.10.32
+botocore==1.13.32
 certifi==2019.9.11
 chardet==3.0.4
 defusedxml==0.6.0
@@ -8,18 +10,23 @@ django-allauth==0.40.0
 django-countries==5.5
 django-crispy-forms==1.8.1
 django-heroku==0.3.1
+django-storages==1.8
+docutils==0.15.2
 gunicorn==20.0.4
 idna==2.8
+jmespath==0.9.4
 oauthlib==3.1.0
 pep8==1.7.1
 Pillow==6.2.1
 psycopg2==2.8.4
 pycodestyle==2.5.0
+python-dateutil==2.8.0
 python-decouple==3.3
 python3-openid==3.1.0
 pytz==2018.5
 requests==2.22.0
 requests-oauthlib==1.3.0
+s3transfer==0.2.1
 six==1.13.0
 sqlparse==0.2.4
 stripe==2.41.0
