--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ env
 **/*.pyc
 **/__pycache__
 media
+*/media/*
 .DS_Store
 *.sqlite3
 *.env
@@ -43,3 +44,4 @@ vecomm
 .history
 
 settings.ini
+.env
